--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -604,7 +604,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 84px 725px;
-        gap: 20px;
+        gap: 30px 0;
         grid-auto-flow: row;
         grid-template-areas:
         "equipment_mobile_control equipment_mobile_control"
@@ -630,6 +630,8 @@
         "skill-1 skill-2 skill-4"
         "skill-3 skill-7 skill-9"
         "skill-8 . .";
+        padding-top: 22px;
+        border-top: 1px solid white;
     }
 
 
@@ -985,18 +987,20 @@
         margin-bottom: 14px;
     }
 
-    section.traffic_patrol .traffic_patrol_slider {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-wrapper .traffic_patrol_slider {
         height: 336px;
     }
 
     section.traffic_patrol .traffic_patrol_slider .garage_model_card {
-        max-width: 336px;
+        /*max-width: 336px;*/
+        max-width: none;
         width: 100%;
         height: 100%;
     }
 
     section.traffic_patrol .traffic_patrol-slide-6 .swiper-pagination {
         display: block;
+        margin-top: 20px;
     }
 
     .swiper-pagination-bullet {
@@ -1012,7 +1016,7 @@
     section.situation_centre .situation_centre_grid-wrapper {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 87px 333px 320px 360px;
+        grid-template-rows: 87px 333px 330px 360px;
         gap: 40px 40px;
         grid-auto-flow: row;
         grid-template-areas:
@@ -1047,9 +1051,8 @@
     }
 
     section.situation_centre .swiper-pagination-bullets {
-        bottom: -20px;
-        position: relative;
         text-align: center;
+        margin-top: 20px;
     }
 
 
@@ -1129,6 +1132,55 @@
     }
 
 
+    footer.footer_main .footer_main_grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 40px 70px 266px 1fr;
+        grid-auto-columns: 1fr;
+        gap: 50px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "footer-title-1"
+        "footer-media-4"
+        "footer-menu-2"
+        "footer-contacts-3";
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 12px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "contacts-1"
+        "contacts-2"
+        "contacts-3";
+        grid-area: footer-contacts-3;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-title-1,
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2,
+    footer.footer_main .footer_main_grid-wrapper .footer-contacts-3,
+    footer.footer_main .footer_main_grid-wrapper .footer-media-4 {
+        justify-self: center;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .text_wrapper {
+        align-self: center;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-links {
+        align-items: center;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 {
+        width: 100%;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"] {
+        justify-content: center;
+    }
 
 }
 
