--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -400,8 +400,11 @@ section.traffic_patrol .container_main {
 
 section.traffic_patrol .traffic_patrol_grid-wrapper {
     display: grid;
+    /*grid-template-columns: repeat(5, 1fr);*/
+    /*grid-template-rows: 144px 144px 0 444px;*/
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 144px 144px 0 444px;
+    /*grid-template-rows: repeat(4, min-content);*/
+    grid-template-rows: repeat(4, max-content);
     grid-auto-columns: 1fr;
     gap: 20px 20px;
     grid-auto-flow: row;
@@ -457,15 +460,16 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-mobile-
 }
 
 section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
+    grid-area: slider_button-wrapper;
     position: relative;
     display: flex;
     align-items: flex-end;
 }
 
-section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons {
-    position: absolute;
-    bottom: -30px;
-}
+/*section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons {*/
+/*    position: absolute;*/
+/*    bottom: -30px;*/
+/*}*/
 
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button {
     padding: 0;
@@ -609,7 +613,8 @@ section.situation_centre .container_main {
 section.situation_centre .situation_centre_grid-wrapper {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr 188px 236px;
+    /*grid-template-rows: 1fr 188px 236px;*/
+    grid-template-rows: repeat(3, min-content);
     gap: 20px 20px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -679,6 +684,7 @@ section.situation_centre .situation_centre_grid-wrapper .employ-4 {
 
 section.situation_centre .situation_centre_grid-wrapper .slider-5 {
     grid-area: slider-5;
+    height: clamp(366px, 444px, 444px);
 }
 
 section.situation_centre .situation_centre_grid-wrapper .slider-5 .garage_model_card {
@@ -739,6 +745,7 @@ section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider 
     background-color: rgba(24, 24, 24, 0.70);
     border-radius: 10px;
     backdrop-filter: blur(5px);
+    min-height: 300px;
 }
 
 section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider .situation_centre_slider .situation_centre-card .slid_img {
@@ -754,7 +761,10 @@ section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider 
 }
 
 section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider .situation_centre_slider .situation_centre-card .slid_info {
-    padding: 10px 10px 28px 10px;
+    display: flex;
+    align-items: center;
+    height: 144px;
+    padding: 10px 18px 28px 18px;
 }
 
 section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider .situation_centre_slider .situation_centre-card .slid_info .slider-text {
@@ -783,7 +793,8 @@ section.help_desk .help_desk_grid-wrapper .mobile_text_combo {
 section.help_desk .help_desk_grid-wrapper {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 234px 352px 0 444px;
+    /*grid-template-rows: 234px 352px 0 444px;*/
+    grid-template-rows: repeat(4, min-content);
     gap: 30px 20px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -963,10 +974,12 @@ section.help_desk .help_desk_grid-wrapper .equipment-4 .skill-10 {
 
 section.help_desk .help_desk_grid-wrapper .slide-5 {
     grid-area: slide-5;
+    height: 444px;
 }
 
 section.help_desk .help_desk_grid-wrapper .slide-6 {
     grid-area: slide-6;
+    height: 444px;
 }
 
 
@@ -1008,9 +1021,9 @@ footer.footer_main .footer_main_grid-wrapper {
     gap: 20px 20px;
     grid-auto-flow: row;
     grid-template-areas:
-        "footer-title-1 . footer-menu-2 . footer-contacts-3"
-        ". . footer-menu-2 . footer-contacts-3"
-        "footer-media-4 . footer-menu-2 . footer-contacts-3";
+        "footer-title-1 . footer-menu-2 footer-menu-2 footer-contacts-3"
+        ". . footer-menu-2 footer-menu-2 footer-contacts-3"
+        "footer-media-4 . footer-menu-2 footer-menu-2 footer-contacts-3";
 }
 
 footer.footer_main .footer_main_grid-wrapper .footer-title-1 {
