--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -981,7 +981,7 @@
         font-size: 2.4rem;
         line-height: 24px;
         max-width: 246px;
-        margin-bottom: 40px;
+        /*margin-bottom: 40px;*/
     }
 
     section.traffic_patrol .traffic_patrol-wrapper img {
@@ -1202,9 +1202,9 @@
         line-height: 24px;
     }
 
-    section.situation_centre .situation_centre_grid-wrapper .slider-5 {
-        height: clamp(366px, 444px, 444px);
-    }
+    /*section.situation_centre .situation_centre_grid-wrapper .slider-5 {*/
+    /*    height: clamp(366px, 444px, 444px);*/
+    /*}*/
 
     section.help_desk .help_desk_grid-wrapper .mobile_text_combo .mobile_text_combo-text {
         font-family: 'MoscowSans', sans-serif;
