--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -4,6 +4,7 @@
 
 /*магия уголков*/
 /*header*/
+/*Меню сайта*/
 /*main*/
 /*traffic_patrol*/
 /*situation_centre*/
@@ -27,6 +28,10 @@ body.main {
     overflow: auto;
 }
 
+body.main.overflow {
+    overflow: hidden;
+}
+
 .container_main {
     width: 100%;
     max-width: 1380px;
@@ -46,7 +51,8 @@ section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"],
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills div[class^="skill-"],
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_control,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"],
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"] {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"],
+.menu .menu-media a[class^="media-"] {
     display: inline-block;
     width: 100%;
     position: relative;
@@ -56,6 +62,7 @@ footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"] 
 
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"],
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"],
+.menu .menu-media a[class^="media-"],
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_control {
     cursor: pointer;
 }
@@ -66,7 +73,8 @@ section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_co
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_control p,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"] img,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"] p,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"] img {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"] img,
+.menu .menu-media a[class^="media-"] img {
     position: relative;
     z-index: 2;
 }
@@ -80,7 +88,9 @@ section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_co
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:before,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:after,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:before,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:after {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:after,
+.menu .menu-media a[class^="media-"]:before,
+.menu .menu-media a[class^="media-"]:after {
     content: "";
     z-index: -1;
     display: block;
@@ -97,6 +107,7 @@ section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:befo
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills div[class^="skill-"]:before,
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_control:before,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:before,
+.menu .menu-media a[class^="media-"]:before,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:before {
     width: calc(100% + 6px);
     height: 90%;
@@ -113,7 +124,8 @@ section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_co
 
 section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:after,
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills div[class^="skill-"]:after,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:after {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:after,
+.menu .menu-media a[class^="media-"]:after {
     height: calc(100% + 5px);
     width: 90%;
     z-index: 0;
@@ -145,7 +157,11 @@ footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:hover:before,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:before,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:hover:after,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:after
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:after,
+.menu .menu-media a[class^="media-"]:hover:before,
+.menu .menu-media a[class^="media-"]:focus:before,
+.menu .menu-media a[class^="media-"]:hover:after,
+.menu .menu-media a[class^="media-"]:focus:after
 {
     background-color: rgba(255, 255, 255, 0.10);
 }
@@ -153,7 +169,9 @@ footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:hover:after,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:focus:after,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:hover:after,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:after {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:after,
+.menu .menu-media a[class^="media-"]:hover:after,
+.menu .menu-media a[class^="media-"]:focus:after {
     height: calc(100% + 0px);
     border-top: 2px solid black;
     border-bottom: 2px solid black;
@@ -162,7 +180,9 @@ footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:hover:before,
 footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 a[class^="contacts-"]:focus:before,
 footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:hover:before,
-footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:before {
+footer.footer_main .footer_main_grid-wrapper .footer-media-4 a[class^="media-"]:focus:before,
+.menu .menu-media a[class^="media-"]:hover:before,
+.menu .menu-media a[class^="media-"]:focus:before {
     width: calc(100% + 0px);
     border-left: 2px solid black;
     border-right: 2px solid black;
@@ -206,6 +226,10 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     color: white;
 }
 
+.header_main .header__menu  {
+    z-index: 11;
+}
+
 .header_main .header__menu .burger-menu {
     margin: 0 auto;
     width: 40px;
@@ -222,6 +246,10 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     width: 50%;
     display: block;
     background-color: white;
+}
+
+.header_main .header__menu .burger-menu .bar.close_width {
+    width: 100%;
 }
 
 .header_main .header__menu .burger-menu .bar:nth-of-type(2) {
@@ -276,6 +304,120 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     transition-delay: 0.3s;
     height: 2px;
 }
+
+
+/*Меню сайта*/
+
+/* Меню, которое будет появляться */
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 24px 30px 120px 24px;
+    background: #000000;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+    overflow: hidden;
+}
+.menu.active {
+    transform: translateY(0);
+    z-index: 10;
+}
+
+.menu .container_main {
+    border: none;
+}
+
+.menu .menu__logo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.menu .menu__logo .menu__logo-img {
+    margin-right: 12px;
+}
+
+.menu .menu__logo .menu__logo-text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 2rem;
+    font-weight: 800;
+}
+
+.menu .menu_navigation .menu_navigation-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item .menu_wrapper_img {
+    width: 40px;
+    height: 40px;
+    /*flex-shrink: 0;*/
+    border-radius: 10px;
+    background: #545454;
+    position: relative;
+    margin-right: 10px;
+}
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item .menu_wrapper_img img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item .menu_navigation-link {
+    text-decoration: none;
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 3.2rem;
+    font-weight: 600;
+    line-height: 32px;
+    color: #FFF;
+    text-transform: uppercase;
+    transition: all .3s ease;
+}
+
+/*.menu .menu_navigation .menu_navigation-list .menu_navigation-item:hover ~ .menu_navigation-item .menu_navigation-link {*/
+/*    color: red;*/
+/*}*/
+
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item .menu_navigation-link.hovered {
+    color: #D1D1D1;
+}
+
+.menu .menu-media {
+    position: absolute;
+    bottom: 120px;
+}
+
+.menu .menu-media a[class^="media-"] {
+    width: 80px;
+    height: 80px;
+}
+
+.menu .menu-media a[class^="media-"]:not(:last-child) {
+    margin-right: 20px;
+}
+
+.menu .menu-media a[class^="media-"] img {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 
 
@@ -885,6 +1027,9 @@ section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_co
 
 section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills {
     grid-area: equipment_mobile_skills;
+    /*height: 0;*/
+    overflow: hidden;
+    transition: height .3s ease;
 }
 
 section.help_desk .help_desk_grid-wrapper .equipment_mobile-slide {
